--- a/driver-location-producer/src/main/resources/application.properties
+++ b/driver-location-producer/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=driver-location-producer
+server.port=8080
+spring.kafka.bootstrap-servers=172.27.50.133:9092
+kafka.topic.driver-location=driver-location-updates
+kafka.topic.partitions=4
+kafka.topic.replicas=1
+
+
+spring.kafka.producer.retries=3
+spring.kafka.producer.acks=1
+spring.kafka.producer.properties.linger.ms=5
+spring.kafka.producer.properties.batch.size=16384
+spring.kafka.producer.properties.buffer.memory=33554432
