--- a/driver-location-consumer/src/main/resources/application.properties
+++ b/driver-location-consumer/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=driver-location-consumer
+server.port=8081
+
+spring.kafka.consumer.bootstrap-servers = 172.27.50.133:9092
+spring.kafka.consumer.topic.driver-location=driver-location-updates
+spring.kafka.consumer.group-id=rider-location-consumer
+kafka.topic.partitions=3
+kafka.topic.replicas=1
